--- a/pixi.toml
+++ b/pixi.toml
@@ -14,3 +14,4 @@ mkdocs-material = ">=9.5"
 serve = "mkdocs serve"
 build = "mkdocs build"
 deploy = "mkdocs gh-deploy"
+sync = "python setup_mkdocs.py --source-dir '/home/nick/Documents/nkf_remote_vault/Teaching/BAN 501/Course Companion'"
